# AMAS2025

./: .gitignore  .readthedocs.yaml  CONVENTION.md  README.md  flake.nix  mkdocs.yml  pyproject.toml  summary.md  versions.json
2025/: 404.html  index.html
2025.1/: 404.html  index.html  sitemap.xml
2025.1/Exercises/: maxLH_show.py
2025.1/StudentPresentations2025/: index.html
2025.1/classes/: index.html
2025.2/: 404.html  index.html  sitemap.xml
2025.2/StudentPresentations2025/: index.html
2025.2/classes/: index.html
2025.3/: 404.html  index.html  sitemap.xml
2025.3/StudentPresentations2025/: index.html
2025.3/classes/: index.html
2025.3/data/: PVals1_2.txt
2025.3/overrides/: main.html
2025.4/: 404.html  index.html  sitemap.xml
2025.4/StudentPresentations2025/: index.html
2025.4/classes/: index.html
2025.4/data/: PVals1_1.txt
2025.5/: 404.html  index.html  sitemap.xml
2025.5/Exercises/: KS_show.py  Lecture4_Bayes_1.py  class4_bayes.ipynb
2025.5/StudentPresentations2025/: index.html
2025.5/classes/: index.html
2025.6/: 404.html  index.html  sitemap.xml
2025.6/Exercises/: C1_produce.py
2025.6/StudentPresentations2025/: index.html
2025.6/classes/: index.html
2025.7/: 404.html  index.html  sitemap.xml
2025.7/Exercises/: Ylm.py  powerspectrum.py
2025.7/StudentPresentations2025/: index.html
2025.7/classes/: index.html
2025.8/: 404.html  index.html  sitemap.xml
2025.8/StudentPresentations2025/: index.html
2025.8/classes/: index.html
2025.9/: 404.html  index.html  sitemap.xml
2025.9/StudentPresentations2025/: index.html
2025.9/assets/: custom.css
2025.9/classes/: index.html
2025/Exercises/: C1_show.py  (+1 more)
docs/: StudentPresentations2025.md  classes.md  index.md
styles/: custom.css
(+3 files in other folders)
