[project]
name = "amas2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-material>=9.6.14",
  "mkdocs-pdf>=0.1.2",
  "mknotebooks>=0.8.0",
]

[dependency-groups]
dev = ["mkdocs>=1.6.1", "mkdocs-material>=9.6.14", "poethepoet>=0.35.0"]

[tool.poe.tasks]
scrape = { cmd = "wget2 --no-parent -mpEk --wait 2 --random-wait https://www.nbi.dk/~koskinen/Teaching/AdvancedMethodsInAppliedStatistics2025/AMAS.html", help = "scrape the course site" }
build = { cmd = 'mkdocs build' }
