[project]
name = "amas2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "mkdocs>=1.6.1",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-material>=9.6.14",
]

[dependency-groups]
dev = ["poethepoet>=0.35.0"]
