[project]
name = "amas2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "mike>=2.1.3",
  "mkdocs>=1.6.1",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-material>=9.6.14",
]

[dependency-groups]
dev = [
    "poethepoet>=0.35.0",
]

[tool.poe.tasks.deploy-docs]
cmd = "mike deploy --push --update-aliases ${version} latest"
help = "Deploy a new version of the documentation and update the 'latest' alias"
args = [
  { name = "version", options = ["--version", "-v"], help = "The version name to deploy", required = true }
]
